# reviewer

./: .gitignore  Procfile  README.md  fabfile.py  manage.py  pyproject.toml  renovate.json  tox.ini
.github/workflows/: ci.yml  deploy.yml  release.yml  renovate_release.yml  tag_release.yml
cbng_reviewer/: asgi.py  celery.py  conftest.py  hooks.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
cbng_reviewer/admin/: __init__.py  forms.py  urls.py  views.py
cbng_reviewer/api/: serializers.py  urls.py  views.py
cbng_reviewer/libs/: core.py  django.py  edit_set.py  irc.py  messages.py  metrics.py  report_interface.py  stats.py  utils.py  wikipedia.py
cbng_reviewer/libs/auth/: notifications.py  pipeline.py  rights.py  utils.py
cbng_reviewer/libs/edit_set/: dumper.py  parser.py  utils.py
cbng_reviewer/libs/models/: edit_set.py  message.py  wikipedia.py
cbng_reviewer/libs/wikipedia/: management.py  reader.py  training.py
cbng_reviewer/management/commands/: add_classifications_for_temp_account_bug.py  add_dangling_edits_to_group.py  add_edits_to_queue.py  add_reported_edits.py  add_reviews_from_bot.py  add_reviews_from_huggle.py  add_reviews_from_report.py  auto_grant_reviewer_access.py  cleanup_user_records.py  create_reports_for_temp_account_bug.py  export_statistics.py  grant_review_access_from_rights.py  import_reported_edits.py  import_training_data.py  import_training_score_data.py  import_vandalism_score_data.py  make_user_admin.py  make_user_reviewer.py  mark_edits_as_deleted.py  mark_edits_with_training_data.py  migrate_revision_data.py  setup_with_historical_data.py  tmp_correct_training_data.py  update_deleted_edits.py  update_edit_classification.py  update_edit_deletion.py  update_usernames.py
cbng_reviewer/migrations/: 0001_initial.py  0002_user_is_bot.py  0003_alter_trainingdata_edit_and_more.py  0004_alter_trainingdata_comment.py  0005_classification_created.py  0006_editgroup_group_type_editgroup_related_to.py  0007_alter_editgroup_related_to_and_more.py  0008_alter_editgroup_name.py  0009_alter_trainingdata_comment.py  0010_rename_deleted_edit_is_deleted.py  0011_edit_has_training_data.py  0012_currentrevision_previousrevision.py  0013_delete_revision.py  0014_rename_minor_currentrevision_is_minor_and_more.py  0015_edit_last_updated_edit_number_of_agreeing_reviewers_and_more.py  0016_edit_cbng_review_status_1bd49a_idx_and_more.py  0016_scoredata.py  0017_edit_cbng_review_is_dele_b35f1f_idx.py  0018_clienterror.py  0019_rename_cbng_review_user_id_clienterror_idx_cbng_review_user_id_92b058_idx_and_more.py
cbng_reviewer/static/css/: interface.css
cbng_reviewer/static/js/: interface.js
cbng_reviewer/tests/: test_api_edit.py  test_api_edit_group.py  test_api_reviewer.py  test_edit.py  utils.py
cbng_reviewer/utils/: command.py  config.py
configs/: jobs.yaml  lighttpd.conf  network-policy.yaml  service.template
data/: admin_users.json  approved_reviewers.json  edit_groups.json  historical_edit_classification.json  historical_edit_counts.json  user_accounts.json
(+49 files in other folders)
