[project]
name = "reviewer"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0.0",
    "social-auth-app-django",
    "mysqlclient",
    "requests",
    "deepmerge",
    "djangorestframework",
    "django_bootstrap5",
    "PyYAML",
    "gunicorn",
    "whitenoise",
    "celery[redis]",
    "prometheus-client",
    "django-prometheus",
    "flower",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
tox = "*"
tox-current-env = "*"
black = "*"
ruff = "*"
djlint = "*"
bandit = "*"
selenium = "*"
pytest-django = "*"
pytest = "*"
pytest-xdist = "*"
freezegun = "*"

[tool.ruff]
exclude = ['*/migrations/*', 've/*', '.tox/*']
line-length = 120

[tool.djlint]
profile = 'django'
use_gitignore = true
max_attribute_length = 120

[tool.black]
line-length = 120
extend-exclude = '''
(
  ^/ve
  |
  ^.*/migrations/.*
)
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cbng_reviewer.settings"
addopts = "--strict-markers"
markers = [
    "unmarked",
    "replica",
    "integration",
    "interactive",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
